<resources>
    <string name="app_name">Lịch vạn niên </string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="Button1">Get Current Time</string>

    <!--Menu-->
    <string name="menu1">Hiện tại</string>
    <string name="menu2">Tìm kiếm</string>
    <string name="menu3">Người phát triển</string>

    <!--Năm-->
    <string name="nhuand"><i>Năm nhuận dương lịch</i></string>
    <string name="nhuana"><i>Năm nhuận âm lịch</i></string>

    <!--Hour-->
    <string name="hour1">Giờ Tí</string>
    <string name="hour2">Giờ Sửu</string>
    <string name="hour3">Giờ Dần</string>
    <string name="hour4">Giờ Mão</string>
    <string name="hour5">Giờ Thìn</string>
    <string name="hour6">Giờ Tị</string>
    <string name="hour7">Giờ Ngọ</string>
    <string name="hour8">Giờ Mùi</string>
    <string name="hour9">Giờ Thân</string>
    <string name="hour10">Giờ Dậu</string>
    <string name="hour11">Giờ Tuất</string>
    <string name="hour12">Giờ Hợi</string>

    <!--Day-->
    <string name="sat">Thứ 7</string>
    <string name="sun">Chủ Nhật</string>
    <string name="mon">Thứ 2</string>
    <string name="tue">Thứ 3</string>
    <string name="wed">Thứ 4</string>
    <string name="thu">Thứ 5</string>
    <string name="fri">Thứ 6</string>

    <!--DayInShort-->
    <string name="sat1">T7</string>
    <string name="sun1">CN</string>
    <string name="mon1">T2</string>
    <string name="tue1">T3</string>
    <string name="wed1">T4</string>
    <string name="thu1">T5</string>
    <string name="fri1">T6</string>

    <!--Star-->
    <string name="s1">Cung Ma Kết</string>
    <string name="s2">Cung Bảo Bình</string>
    <string name="s3">Cung Song Ngư</string>
    <string name="s4">Cung Bạch Dương</string>
    <string name="s5">Cung Kim Ngưu</string>
    <string name="s6">Cung Song Tử</string>
    <string name="s7">Cung Cự Giải</string>
    <string name="s8">Cung Sư Tử</string>
    <string name="s9">Cung Xử Nữ</string>
    <string name="s10">Cung Thiên Bình</string>
    <string name="s11">Cung Bọ Cạp</string>
    <string name="s12">Cung Nhân Mã</string>

    <!--Can-->
    <string name="c1" translatable="false">Giáp</string>
    <string name="c2">Ất</string>
    <string name="c3">Bính</string>
    <string name="c4">Đinh</string>
    <string name="c5">Mậu</string>
    <string name="c6">Kỷ</string>
    <string name="c7">Canh</string>
    <string name="c8">Tân</string>
    <string name="c9">Nhâm</string>
    <string name="c10">Quý</string>

    <!--Chi-->
    <string name="ch1">Tý</string>
    <string name="ch2">Sửu</string>
    <string name="ch3">Dần</string>
    <string name="ch4">Mão</string>
    <string name="ch5">Thìn</string>
    <string name="ch6">Tị</string>
    <string name="ch7">Ngọ</string>
    <string name="ch8">Mùi</string>
    <string name="ch9">Thân</string>
    <string name="ch10">Dậu</string>
    <string name="ch11">Tuất</string>
    <string name="ch12">Hợi</string>

    <!--Giờ Hoàng Đạo-->

    <string name="hh"><b>Giờ Hoàng Đạo</b></string>
    <string name="h1">Tý, Sửu, Thìn, Tị, Mùi, Tuất</string>
    <string name="h2">Tý, Dần, Mão, Ngọ, Mùi, Dậu</string>
    <string name="h3">Dần, Thìn, Tị, Thân, Dậu, Hợi</string>
    <string name="h4">Sửu, Thìn, Ngọ, Mùi, Tuất, Hợi</string>
    <string name="h5">Tý, Sửu, Mão, Ngọ, Thân, Dậu</string>
    <string name="h6">Dần, Mão, Thìn, Thân, Tuất, Hợi</string>


    <!--General-->
    <string name="y"><b>Năm</b></string>
    <string name="m"><b>Tháng</b></string>
    <string name="d"><b>Ngày</b></string>
    <string name="h"><b>Giờ</b></string>
    <string name="nh"><b>Nhóm nguyên tố</b></string>
    <string name="ha"><b>Hành tinh quản chiếu</b></string>
    <string name="th"><b>Thần bảo hộ</b></string>
    <string name="menh"><b>Mệnh</b></string>
    <string name="dt"><b>Đặc tính chòm sao: </b></string>
    <string name="tinhcach"><b>Tính cách: </b></string>
    <!--Button-->
    <string name="button">Chọn</string>

    <!--4 nhóm nguyên tố-->
    <string name="k">Khí</string>
    <string name="l">Lửa</string>
    <string name="n">Nước</string>
    <string name="dat">Đất</string>

    <!--Hành tinh-->
    <string name="st1">Sao Hỏa</string>
    <string name="st2">Sao Kim</string>
    <string name="st3">Sao Thủy</string>
    <string name="st4">Mặt Trăng</string>
    <string name="st5">Mặt Trời</string>
    <string name="st6">Sao Diêm Vương</string>
    <string name="st7">Sao Mộc</string>
    <string name="st8">Sao Thổ</string>
    <string name="st9">Sao Thiên Vương</string>
    <string name="st10">Sao Hải Vương</string>

    <!--Thần bảo hộ-->
    <string name="a1">Thần chiến tranh Ares</string>
    <string name="a2">Thần tình yêu và sắc đẹp Aphrodite</string>
    <string name="a3">Thần thông tin Hermes</string>
    <string name="a4">Thần hôn nhân gia đình Hera</string>
    <string name="a5">Thần nông nghiệp Demeter</string>
    <string name="a6">Thần mặt trời Apollo</string>
    <string name="a7">Thần trí tuệ Athena</string>
    <string name="a8">Thần cai quản địa ngục Hades</string>
    <string name="a9">Thần Zeus</string>
    <string name="a10">Nhân Mã thông thái Chiron</string>
    <string name="a11">Thần thời gian Cronos</string>
    <string name="a12">Thần bầu trời Uranus</string>
    <string name="a13">Thần biển cả Poseidon</string>

    <!--Giá trị rỗng-->
    <string name="empty"></string>


    <!--Tính chất-->
    <string name="tc1">Thống lĩnh</string>
    <string name="tc11">Ý chí mạnh mẽ, có khả năng lãnh đạo, năng động, là người tiên phong, có động lực, không ngại thử thách</string>
    <string name="tc2">Cố định</string>
    <string name="tc22">Kiên định, kỹ lưỡng, dai dẳng, nhất quán, nhiệt huyết, trung thành</string>
    <string name="tc3">Linh hoạt</string>
    <string name="tc33">Dễ thay đổi, hiếu động, khả năng thích nghi cao, không cứng nhắc, dễ tiếp thu</string>

    <!--Mối quan hệ-->
    <string name="va"><i>và</i></string>
    <string name="qh1"><i>Phát huy tốt nhất khi ở cùng với</i></string>
    <string name="qh2"><i>Có khoảng thời gian khó khăn nếu ở cùng với</i></string>
    <string name="qh3"><i>Chòm sao tương hỗ:</i></string>

    <!--Sao viết tắt-->
    <string name="sa1">Ma Kết</string>
    <string name="sa2">Bảo Bình</string>
    <string name="sa3">Song Ngư</string>
    <string name="sa4">Bạch Dương</string>
    <string name="sa5">Kim Ngưu</string>
    <string name="sa6">Song Tử</string>
    <string name="sa7">Cự Giải</string>
    <string name="sa8">Sư Tử</string>
    <string name="sa9">Xử Nữ</string>
    <string name="sa10">Thiên Bình</string>
    <string name="sa11">Bọ Cạp</string>
    <string name="sa12">Nhân Mã</string>

    <!--Ngũ hành-->
    <string name="kim">Kim</string>
    <string name="moc">Mộc</string>
    <string name="thuy">Thủy</string>
    <string name="hoa">Hỏa</string>
    <string name="tho">Thổ</string>

    <!--60 hoa giáp tý-->
    <string name="hh1">Gỗ thạch lựu</string>
    <string name="hh2">Kim trang sức</string>
    <string name="hh3">Đất trên tường</string>
    <string name="hh4">Gỗ tùng bách</string>
    <string name="hh5">Kim giá đèn</string>
    <string name="hh6">Đất bên đường</string>
    <string name="hh7">Nước biển lớn</string>
    <string name="hh8">Gỗ cây dâu</string>
    <string name="hh9">Kim đất mỏng</string>
    <string name="hh10">Nước sông dài</string>
    <string name="hh11">Gỗ dương liễu</string>
    <string name="hh12">Kim lưỡi kiếm</string>
    <string name="hh13">Kim trong biển</string>
    <string name="hh14">Nước khe lớn</string>
    <string name="hh15">Hỏa ngọn đèn</string>
    <string name="hh16">Kim trong cát</string>
    <string name="hh17">Nước trong suối</string>
    <string name="hh18">Hỏa trên núi</string>
    <string name="hh19">Hỏa trong lò</string>
    <string name="hh20">Thổ trong cát</string>
    <string name="hh21">Nước trên trời</string>
    <string name="hh22">Hỏa chân núi</string>
    <string name="hh23">Đất mái nhà</string>
    <string name="hh24">Nước dưới khe</string>
    <string name="hh25">Gỗ rừng xanh</string>
    <string name="hh26">Hỏa trên trời</string>
    <string name="hh27">Đất dịch chuyển</string>
    <string name="hh28">Cây đồng bằng</string>
    <string name="hh29">Hỏa sấm sét</string>
    <string name="hh30">Đất tường thành</string>

    <!--Giờ-->
    <string name="choosehour">Chọn giờ</string>
    <string-array name="hhh">
        <item>Giờ Tí (23h-1h)</item>
        <item>Giờ Sửu (1h-3h)</item>
        <item>Giờ Dần (3h-5h)</item>
        <item>Giờ Mão (5h-7h)</item>
        <item>Giờ Thìn (7h-9h)</item>
        <item>Giờ Tị (9h-11h)</item>
        <item>Giờ Ngọ (11h-13h)</item>
        <item>Giờ Mùi (13h-15h)</item>
        <item>Giờ Thân (15h-17h)</item>
        <item>Giờ Dậu (17h-19h)</item>
        <item>Giờ Tuất (19h-21h)</item>
        <item>Giờ Hợi (21h-23h)</item>
    </string-array>

    <!--24 tiét khi-->
    <string name="tk1">Lập xuân</string>
    <string name="tk2">Vũ thủy</string>
    <string name="tk3">Kinh trập</string>
    <string name="tk4">Xuân phân</string>
    <string name="tk5">Thanh minh</string>
    <string name="tk6">Cốc vũ</string>
    <string name="tk7">Lập hạ</string>
    <string name="tk8">Tiểu mãn</string>
    <string name="tk9">Mang chủng</string>
    <string name="tk10">Hạ chí</string>
    <string name="tk11">Tiểu thử</string>
    <string name="tk12">Đại thử</string>
    <string name="tk13">Lập thu</string>
    <string name="tk14">Xử thử</string>
    <string name="tk15">Bạch lộ</string>
    <string name="tk16">Thu phân</string>
    <string name="tk17">Hàn lộ</string>
    <string name="tk18">Sương giáng</string>
    <string name="tk19">Lập đông</string>
    <string name="tk20">Tiểu tuyết</string>
    <string name="tk21">Đại tuyết</string>
    <string name="tk22">Đông chí</string>
    <string name="tk23">Tiểu hàn</string>
    <string name="tk24">Đại hàn</string>

    <!--24 tiết khí chi tiết-->
    <string name="tk1a">Đầu xuân</string>
    <string name="tk2a">Mưa ẩm</string>
    <string name="tk3a">Sâu nở</string>
    <string name="tk4a">Giữa xuân</string>
    <string name="tk5a">Trời trong sáng</string>
    <string name="tk6a">Mưa rào</string>
    <string name="tk7a">Bắt đầu mùa hè</string>
    <string name="tk8a">Lúa xanh</string>
    <string name="tk9a">Lúa trổ</string>
    <string name="tk10a">Giữa hè</string>
    <string name="tk11a">Nóng nhẹ</string>
    <string name="tk12a">Nóng oi</string>
    <string name="tk13a">Đầu thu</string>
    <string name="tk14a">Mưa ngâu</string>
    <string name="tk15a">Nắng nhạt</string>
    <string name="tk16a">Giữa thu</string>
    <string name="tk17a">Mát mẻ</string>
    <string name="tk18a">Sương rơi</string>
    <string name="tk19a">Đầu đông</string>
    <string name="tk20a">Tuyết nhẹ</string>
    <string name="tk21a">Tuyết lớn</string>
    <string name="tk22a">Giữa đông</string>
    <string name="tk23a">Rét nhẹ</string>
    <string name="tk24a">Rét đậm</string>

    <!--Weather-->
    <string name="description">Description</string>
    <string name="sunny">Trời nắng</string>
    <string name="cloudy">Mây</string>
    <string name="heavy_rain">Mưa to</string>
    <string name="snow">Tuyết</string>
    <string name="storm">Sấm chớp</string>
    <string name="rain">Mưa</string>
    <string name="foggy">Sương mù</string>

    <!--Place-->
    <string name="hn">Hà Nội</string>
</resources>
